# faaster

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-dev.yaml  pyproject.toml  server.py
faaster/: asset_administration_shell.py
faaster/aas_metamodel/: __init__.py  dto.py  exceptions.py  submodel_element_processor.py  validators.py
faaster/cli/: __init__.py  cli.py  cli_identification.py
faaster/extensions/: __init__.py  context.py  interfaces.py  loader.py
faaster/hda/: __init__.py  factory.py  manager.py  policies.py  storage.py
faaster/infra/: aas_server.py  address_space.py  database_timescale.py
faaster/interfaces/: __init__.py  iaddress_space.py  idatabase.py  ielement_creator.py  ihda.py  inode.py  iserver.py  types.py
faaster/loader/: exceptions.py  factory.py  interfaces.py
faaster/log/: __init__.py  log.py
faaster/parser/: __init__.py  aas_parser.py  element_creator.py  node_registry.py
tests/: model.json  requirements-dev.txt
tests/asset_administration_shell/: register_client.py
tests/interfaces/: test_base_client.py  test_base_entrypoint.py  test_base_server.py  test_base_submodel.py
tests/json-models/: aas_descriptor.json  annotated-relationship-element-maximal.json  annotated-relationship-element-minimal.json  asset-administration-shell-discovery.json  asset-administration-shell-maximal.json  asset-administration-shell-minimal.json  asset-administration-shell-with-references.json  basic-event-element-maximal.json  basic-event-element-minimal.json  blob-maximal.json  blob-minimal.json  entity-maximal.json  (+47 more)
(+137 files in other folders)
